# specify-playground

./: .assistant-consent  .assistant-consent.example  .copilot-run-policy.md  .flake8  .gitignore  .pre-commit-config.yaml  AI_INSTRUCTIONS.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  COPILOT_CROSSCHECK.md  Makefile  PR_BODY.md  README.md  SPECIFY_ASSUMPTIONS.md  TEST_ISSUES.md  __init__.py  conftest.py  file_hashes_sample.csv  flake8_verbose.txt  generate_deletion_script.py  interactive_deletions.py  interactive_resolver.py  interactive_scan_results.yaml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements.txt.bak  results.yaml  setup.py  setup_spec_kit.ps1  stdout.txt  tmp_debug_runner.py  tmp_debug_runner2.py  x17.yaml
.github/: copilot-instructions.md
.github/chatmodes/: Precision Q&A.chatmode.md
.github/prompts/: concise.prompt.md  pqna.prompt.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md  constitution_update_checklist.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
BUG_REPORTS/: 0001-azure-doc-origin.md  0002-specify-branching-strategy-ambiguity.md  0003-copilot-issue.md  0003-duplicate-edit-corruption.md  0004-recurring-test-cancel-issue.md  0004-restore-unit-tests-file_scanner.md
BUG_REPORTS/attachments/: file_scanner_current.py
BUG_REPORTS/patches/: 0001-docs-bugs-finalize-bug-report-0001-clarify-origin-an.patch
labels/: feedback_microsoft.json
scripts/: apply_quick_fixes.sh  debug_validate.py  repro_patch.py  run-playground.sh  run-tests.ps1  run_all.sh  run_detector_with_db_test.py  update-spec-kit.sh  verify_and_run.sh
specs/: README.md
specs/001-build-a-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-onedrive-compat-the/: COPILOT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-generalize-file-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  __main__.py  index.ts
src/cli/: __init__.py  config_commands.py  db_commands.py  main.py  typer_cli.py  typer_config.py  typer_db.py
src/lib/: config_manager.py  container.py  exceptions.py  interfaces.py  selection.py  windows_onedrive_api.py
src/migrations/: migrate.py
src/models/: __init__.py  (+8 more)
temp_test/: final_demo.yaml  fixed_yaml_output.yaml  results.json  results.yaml  results_new.json  test_yaml_output.yaml
tests/: cli_runner_compat.py  conftest.py  playground.test.ts  tmp_integration.yaml  tmp_perf.yaml
(+78 files in other folders)
